Fix colors/contrast for comment buttons in presentation bar

--- a/src/app/standalone/comment-filter/comment-filter.component.scss
+++ b/src/app/standalone/comment-filter/comment-filter.component.scss
@@ -3,3 +3,9 @@
 .extra-padding {
   padding: 0 $spacing-2;
 }
+
+.standard-button {
+  height: 100%;
+  opacity: 1;
+  color: var(--on-surface-light);
+}
